# voice_assistant

./: .gitignore  config.ini  pyproject.toml
app/: config.py  main.py
app/agent/: assistant.py
app/prompts/: agent_prompt.py
app/routers/: agent_assistant.py
app/schemas/: apis_input.py  response.py  user_input.py
app/services/: get_response.py  memory.py
app/services/authentication/: calendar_authentication.py  gmail_authentication.py
app/services/memory/: add_to_chat_history.py
app/services/speech_services/: speech_to_text.py  text_to_speech.py
app/services/tools/: create_event_tool.py  get_events_tool.py  gmail_toolkit.py  weather_tool.py
